--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongodb": "^4.4.1",
     "next": "12.1.4",
     "next-auth": "^4.3.1",
+    "node-fetch": "^3.2.3",
     "nodemailer": "^6.7.3",
     "react": "18.0.0",
     "react-dom": "18.0.0"
