--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.0.3",
+    "moment": "^2.29.1",
     "mongodb": "^4.4.1",
     "next": "12.1.4",
     "next-auth": "^4.3.1",
