--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "node-fetch": "^3.2.3",
     "nodemailer": "^6.7.3",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "recharts": "^2.1.9"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
