--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # Passwordless login config
-EMAIL_SERVER=
-EMAIL_FROM=
+EMAIL_SERVER_USER=username
+EMAIL_SERVER_PASSWORD=password
+EMAIL_SERVER_HOST=smtp.example.com
+EMAIL_SERVER_PORT=587
+EMAIL_FROM=noreply@example.com
 
 # Main database
 MONGODB_URI=
