--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^4.5.0",
     "next": "12.1.4",
     "next-auth": "^4.3.1",
+    "next-pwa": "^5.5.0",
     "node-fetch": "^3.2.3",
     "nodemailer": "^6.7.3",
     "react": "18.0.0",
