--- a/package.json
+++ b/package.json
@@ -11,24 +11,24 @@
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.0.3",
-    "moment": "^2.29.2",
+    "moment": "^2.29.3",
     "mongodb": "^4.5.0",
-    "next": "12.1.4",
-    "next-auth": "^4.3.1",
-    "next-pwa": "^5.5.0",
+    "next": "^12.1.5",
+    "next-auth": "^4.3.3",
+    "next-pwa": "^5.5.2",
     "node-fetch": "^3.2.3",
     "nodemailer": "^6.7.3",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "recharts": "^2.1.9"
   },
   "devDependencies": {
-    "@types/node": "17.0.23",
-    "@types/react": "17.0.43",
-    "@types/react-dom": "17.0.14",
-    "eslint": "8.12.0",
-    "eslint-config-next": "12.1.4",
-    "next-sitemap": "^2.5.19",
+    "@types/node": "17.0.25",
+    "@types/react": "18.0.6",
+    "@types/react-dom": "18.0.2",
+    "eslint": "8.14.0",
+    "eslint-config-next": "12.1.5",
+    "next-sitemap": "^2.5.20",
     "prettier": "^2.6.2",
     "typescript": "4.6.3"
   }
